<resources>
    <string name="account">Account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="app_name">SocialGift</string>
    <string name="create_new_wishlist">Create new wishlist</string>
    <string name="deleted_wishlist">Deleted %1$s</string>
    <string name="dont_have_an_account_register">Don\'t have an account? Register now</string>
    <string name="edit_account">Edit account</string>
    <string name="email">E-mail</string>
    <string name="email_at_error">Email must contain @</string>
    <string name="email_empty_error">Email cannot be empty</string>
    <string name="friend_requests">Friend requests</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="new_wishlist">New wishlist</string>
    <string name="password">Password</string>
    <string name="password_empty_error">Password cannot be empty</string>
    <string name="password_length_error">Password must be at least 8 characters</string>
    <string name="password_match_error">Passwords must match</string>
    <string name="password_number_error">Password must contain a number</string>
    <string name="repeat_password">Repeat password</string>
    <string name="search_users">Search users</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="there_are_no_wishlists_yet">There are no wishlists yet.</string>
    <string name="undo">Undo</string>
    <string name="username">Username</string>
    <string name="username_empty_error">Username cannot be empty</string>
    <string name="username_invalid_error">Username can only contain letters, numbers, and underscores</string>
    <string name="username_length_error">Username must be at least 3 characters</string>
    <string name="wishlist">Wishlist</string>
    <string name="wishlist_description">Description</string>
    <string name="wishlist_description_empty_error">Description cannot be empty</string>
    <string name="wishlist_name">Name</string>
    <string name="wishlist_name_empty_error">Name cannot be empty</string>
    <string name="edit_wishlist">Edit wishlist</string>
</resources>