<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_users"
        android:contentDescription="@string/search_users"
        android:icon="@drawable/magnify"
        android:title="@string/search_users"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_friend_requests"
        android:contentDescription="@string/friend_requests"
        android:icon="@drawable/account_arrow_left_outline"
        android:title="@string/friend_requests"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_messages"
        android:contentDescription="@string/messages"
        android:icon="@drawable/message_text_outline"
        android:title="@string/messages"
        app:showAsAction="ifRoom" />
</menu>