<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wishlist">

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.jacobd2001.socialgift.home.WishlistFragment"
        android:label="@string/wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.jacobd2001.socialgift.home.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.jacobd2001.socialgift.home.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>